# proyecto_easyworship

./: README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: .gitignore  2  Cargo.toml  cantos.db  cantos.db-shm  cantos.db-wal  multimedia.db-shm  multimedia.db-wal  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
