[package]
name = "easyworship-rs"
version = "0.0.0"
description = "Software de Proyección para Iglesias"
authors = ["you"]
edition = "2021"

[lib]
name = "easyworship_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Rusqlite con bundled permite que SQLite funcione sin instalar nada en Windows
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
